k8s/infra/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cronos-bot
  labels:
    app.kubernetes.io/part-of: cronos
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
